adding colors to where textbox

--- a/src/app/application/application.component.html
+++ b/src/app/application/application.component.html
@@ -20,12 +20,13 @@
 
     </div>
 </div>
-
+<div *ngIf="!globals.isFullscreen" class="msf-menu-icons-container">
+    <div class="msf-secondary-color msf-menu-icon-container msf-menu-adm">connected</div>
+</div>
 <!--body-->
-<div class="msf-menu-body">
 
+<app-web-services></app-web-services>
+<!--container-->
+<div>
 
-    <!--container-->
-    <div>
-
-    </div>
+</div>
