--- a/src/styles.sass
+++ b/src/styles.sass
@@ -19,6 +19,10 @@
 
 @import "~@angular/material/prebuilt-themes/deeppurple-amber.css"
 
+@import "~codemirror/lib/codemirror.css"
+
+@import "~codemirror/theme/material.css"
+
 
 body
     background-image: url("assets/images/fondo.png")
@@ -247,8 +251,6 @@ p
     padding-left: 10px
     margin-bottom: 2px
     background: rgba($msf-primary-dark-color,.5)
-
-.msf-row
 
 .msf-row-name
     @extend .msf-font-smaller
@@ -814,9 +816,6 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button
     width: calc(100% - 200px) !important
 
 .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle
-
-
-.mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle
     border-color: $msf-secondary-color
 
 .mat-radio-button.mat-accent .mat-radio-inner-circle
@@ -887,11 +886,6 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button
 
 .ng-dropdown-panel .ng-dropdown-panel-items .ng-option.ng-option-selected
     color: $msf-secondary-color!important
-
-
-
-
-
 
 /*Menu*/
 .msf-menu-header
@@ -986,8 +980,6 @@ button[aria-expanded="true"]
     display: flex
     margin:5px 5px 5px 0px
     color: white
-
-.msf-menu-icon-container
 
 .msf-menu-adm
     margin-right: 100px
@@ -1141,8 +1133,6 @@ button[aria-expanded="true"]
 
 .msf-menu-hide-full-nav
     display: none
-
-.msf-menu-show-full-nav
 
 .msf-menu-show-full-nav-component
     width: 100%
@@ -2259,8 +2249,6 @@ mat-dialog-container
     &:first-of-type
             margin-top: 10px
 
-.jqx-widget-header
-
 .msf-width-20
     width: 20%
 
@@ -2272,9 +2260,6 @@ mat-dialog-container
 
 .mat-tab-label
     color: #f7f5f5
-
-.landing-icon
-
 
 .landing-icon-content
     display: flex
@@ -2495,8 +2480,6 @@ li.msf-select:before
     color: white
     font-size: 161%
     font-weight: bold
-
-.msf-summary-subtitle
 
 .msf-intro-body1
     color: white
@@ -3113,7 +3096,6 @@ table.datasource
     vertical-align: middle
     text-align: center
     padding: 5% 0
-.landing-icon-content-child
 
 .landing-icon-content-child:hover, .icon-container:hover
     // background-color: black
@@ -3193,3 +3175,16 @@ img.msf-calendar-image
 
 .activation-form input
     color: white !important
+
+.cm-s-material.CodeMirror
+    background-color: #1e1e1e !important
+
+.CodeMirror-gutter
+    display: none
+
+.cm-s-material .CodeMirror-guttermarker, .cm-s-material .CodeMirror-guttermarker-subtle, .cm-s-material .CodeMirror-linenumber
+    color: #333
+    display: none
+
+.CodeMirror
+    height: 100px
