--- a/src/app/application/application.component.html
+++ b/src/app/application/application.component.html
@@ -18,6 +18,20 @@
                 </button>
         </mat-menu>
 
+        <button mat-icon-button [matMenuTriggerFor]="adminMenu">
+          <mat-icon>more_vert</mat-icon>
+      </button>
+        <mat-menu #adminMenu="matMenu">
+            <button mat-menu-item (click)="getOption('create')">
+                  <mat-icon>settings</mat-icon>
+                  <span>Create Web Service</span>
+              </button>
+            <button mat-menu-item (click)="getOption('list')">
+                  <mat-icon>settings</mat-icon>
+                  <span>All web services</span>
+              </button>
+        </mat-menu>
+
     </div>
 </div>
 <div *ngIf="!globals.isFullscreen" class="msf-menu-icons-container">
@@ -25,7 +39,8 @@
 </div>
 <!--body-->
 
-<app-web-services></app-web-services>
+<app-web-services *ngIf="globals.currentApplication == 'create'"></app-web-services>
+<app-all-web-services *ngIf="globals.currentApplication == 'list'"></app-all-web-services>
 <!--container-->
 <div>
 
