--- a/src/styles.sass
+++ b/src/styles.sass
@@ -366,7 +366,7 @@ p
 
 
 .mat-form-field.mat-focused .mat-form-field-ripple
-    background-color: $msf-secondary-color
+    background-color: #333333
 
 .mat-form-field-ripple
     background-color: $msf-secondary-color
@@ -413,6 +413,12 @@ p
     border-radius: 10px!important
     background: rgba($msf-primary-dark-color,.5)
     padding: 50px!important
+
+.msf-container-table
+    margin: 20px auto
+    background: transparent
+    padding: 30px!important
+    padding-top: 0px !important
 
 .login-card
     @extend .msf-card
@@ -552,7 +558,7 @@ p
     transition: background-size 0.3s cubic-bezier(0.64, 0.09, 0.08, 1)
 
 input::-webkit-outer-spin-button, input::-webkit-inner-spin-button
-    /* display: none; <- Crashes Chrome on hover */
+    /* display: none <- Crashes Chrome on hover */
     -webkit-appearance: none
     margin: 0
 
@@ -631,8 +637,7 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button
 .mat-stepper-horizontal-line
     border-top-color: $msf-primary-light-color
 
-.msf-item
-    width: 89%
+
 
 .msf-register-list
     display: inline-block
@@ -680,6 +685,11 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button
     .mat-step-icon
         background-color: $msf-secondary-color
         color: white
+
+.mat-step-icon .mat-icon
+    font-size: 16px
+    height: 10px !important
+    width: 16px !important
 
 .msf-medium-title
     color: white
@@ -886,6 +896,10 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button
 
 .ng-dropdown-panel .ng-dropdown-panel-items .ng-option.ng-option-selected
     color: $msf-secondary-color!important
+
+.general-container
+    width: 100%
+    background-color: $msf-primary-color
 
 /*Menu*/
 .msf-menu-header
@@ -1767,6 +1781,9 @@ mat-tab-group
     .mat-form-field-underline
         background-color: #595959
 
+.select-dark .mat-form-field-underline
+        height: 0px !important
+
 .msf-dashboard-column-properties-form-field
     .mat-select-value-text
         color: #fff
@@ -2104,16 +2121,16 @@ mat-dialog-container
 ::-webkit-scrollbar-track
     //-webkit-box-shadow: inset 0 0 6px rgba($msf-primary-color,0.3)
     border-radius: 10px
-    background-color: $msf-primary-dark-color
+    background-color: transparent
 
 ::-webkit-scrollbar-thumb
-  background-color: $msf-secondary-color
+  background-color: #3d3d3d52
   border-radius: 10px
   outline: 1px solid blue
 
 .mat-primary .mat-pseudo-checkbox-checked, .mat-primary .mat-pseudo-checkbox-indeterminate
     border-radius: 10px
-    background-color: $msf-secondary-color
+    background-color: transparent
 
 .mat-pseudo-checkbox
     border-radius: 10px!important
@@ -2298,18 +2315,18 @@ mat-dialog-container
     opacity: 0
 
 .loading-panel
-    position:  fixed
+    position: fixed
+    margin-bottom: 15px
     z-index: 99999
     left: 0
     top: 0
     width: 100%
     height: 100%
-    opacity:0.9
-    background-color: rgba(0,0,0,.9)
+    background-color: #1F1F1F
     background-image: url(assets/images/loading_pulse.gif)
     background-repeat: no-repeat
     background-position: center
-    background-size: contain
+    background-size: 25%
 
 .mat-tab-header, .mat-tab-nav-bar
     border-bottom: 1px solid rgba(62, 60, 60, 0.8)!important
@@ -2723,7 +2740,7 @@ table.datasource
     text-align: right
     position: relative
     z-index: 999
-    /* z-index: auto; */
+    /* z-index: auto */
 
 
 .msf-membership-card
@@ -3173,8 +3190,30 @@ img.msf-calendar-image
     line-height: 3.125
     font-family: Roboto, "Helvetica Neue", sans-serif
 
+.ws-title
+    color: white
+    font-weight: 500
+    font-size: 24px
+    padding: 30px
+    width: 45px
+
 .activation-form input
     color: white !important
+
+.server-config .mat-form-field-underline
+    height: 1px !important
+
+.server-config
+    margin-bottom: 60px
+
+.search-input .mat-form-field-appearance-legacry .mat-form-field-underline
+  display: none
+
+.search-input .mat-form-field-underline
+  display: none
+
+.summary-query
+    background-color: red
 
 .cm-s-material.CodeMirror
     background-color: #1e1e1e !important
@@ -3188,3 +3227,213 @@ img.msf-calendar-image
 
 .CodeMirror
     height: 100px
+
+div
+    color: white
+    font-size: 14px
+
+
+.mat-horizontal-stepper-header-container
+    background-color: #1e1e1e
+    height: 10%
+
+
+.mat-stepper-horizontal,
+.mat-stepper-vertical
+    width: 100%
+    background-color: #232323
+
+
+.button-publish
+    width: 30%
+    border-radius: 0px
+    margin-left: 230px
+    margin-top: 22px
+    height: 45%
+
+
+.mat-horizontal-content-container
+    overflow: hidden
+    padding: 0 0 0 0 !important
+    width: 100%
+
+
+.mat-checkbox-label
+    color: white
+    font-size: 14px
+
+
+.ng-star-inserted .mat-step-icon
+    border-style: solid
+    border-width: 2px
+    background-color: transparent
+    color: white
+
+
+.mat-stepper-horizontal-line
+    border-top-style: none !important
+
+
+.msf-menu-header
+    background-color: #333333
+
+
+.mat-step-header
+    height: 100% !important
+
+
+.ws-title
+    color: white
+    font-weight: 500
+    font-size: 24px
+    padding: 30px
+    width: 45%
+
+
+.box-container
+    display: block
+    flex-wrap: wrap
+    max-height: 300px
+    height: 300px
+    overflow-y: scroll
+    margin-top: 10px
+    width: 90%
+    padding-left: 10px
+    background-color: #1e1e1e
+
+
+.container-arg
+    overflow-y: scroll
+    max-height: 265px
+    display: block
+    flex-wrap: wrap
+
+
+
+.scroll-type
+    display: block
+    flex-wrap: wrap
+    overflow-y: scroll
+    max-height: 110px
+
+
+
+.selected-objects
+    background-color: #333333
+    height: 20px
+    margin-bottom: 5px
+    margin-right: 5px
+    padding: 3px
+    color: white
+
+
+.selected-containers
+    height: 100px
+    max-height: 100px
+    display: flex
+    flex-wrap: wrap
+    overflow-y: auto
+
+
+.box-titles
+    color: white !important
+
+
+mat-select
+    background-color: #1e1e1e
+    width: 100%
+    height: 35px
+
+
+.mat-select-panel
+    background-color: #1e1e1e
+
+
+.mat-option-text
+    color: white
+
+
+.box-container .mat-form-field-appearance-legacry .mat-form-field-underline
+    display: none
+
+
+.search-input .mat-form-field-appearance-legacry .mat-form-field-underline
+  display: none
+
+
+.mat-form-field
+    height: 10px
+
+
+.mat-select-value
+    line-height: 35px
+    color: #01abec
+    padding-left: 10px
+
+
+.mat-icon
+    line-height: 10px
+
+
+.search-input
+    color: white !important
+    width: 85% !important
+    padding-left: 10px !important
+    font-size: 14px !important
+    line-height: 35px !important
+
+
+.select-column
+    width: 15% !important
+    border-color: white
+    border-style: solid
+    color: white !important
+    height: 30px
+    border-width: 0.5px
+    margin-right: 15px
+
+
+.agr-functions
+    margin-right: 15px
+
+
+.mat-divider
+    border-top-color: rgba(121, 117, 117, 0.12)
+
+
+.argument-container
+    padding-bottom: 15px
+    margin-top: 25px
+
+
+.mat-radio-inner-circle
+    height: 15px
+    width: 15px
+
+
+.mat-mini-fab.mat-accent
+    color: rgba(0, 0, 0, .87) !important
+
+
+textarea.mat-input-element
+    padding: 2px 0
+    margin: -2px 0
+    background-color: #1e1e1e
+    height: 80px
+    max-height: 80px
+    margin-right: 144px
+
+
+.titles-large
+    font-size: 20px
+    background-color: #1e1e1e
+    padding: 5px
+
+
+.mat-form-field-infix
+    border-top: 0em solid transparent
+
+
+.placeholder
+    color: rgba(148, 147, 147, 0.87)
+
