--- a/src/styles.sass
+++ b/src/styles.sass
@@ -3394,7 +3394,8 @@ mat-select
 
 
 .agr-functions
-    margin-right: 15px
+    margin: 3px
+    width: 40%
 
 
 .mat-divider
@@ -3436,4 +3437,7 @@ textarea.mat-input-element
 
 .placeholder
     color: rgba(148, 147, 147, 0.87)
+
+
+
 
