Fixing issues and adding drag and drop to columns

--- a/src/app/all-web-services/all-web-services.component.html
+++ b/src/app/all-web-services/all-web-services.component.html
@@ -4,10 +4,17 @@
     </div>
     <mat-card class="msf-container-table msf-center-container">
         <div style="display: flex; flex-direction: column;">
-            <mat-form-field style="width:50%; float: right; margin-top: 20px">
-                <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-            </mat-form-field>
-
+            <div style="display: flex; flex-direction: row;">
+                <mat-form-field style="width:50%; float: right; margin-top: 20px">
+                    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+                </mat-form-field>
+                <div style="width:50%;justify-content:flex-end;display: flex; flex-direction: row;">
+                    <div style="line-height: 42px">Create new Web Service</div>
+                    <button mat-icon-button (click)="addWebService()">
+              <mat-icon style="color: white" aria-label="add">add_circle</mat-icon>
+            </button>
+                </div>
+            </div>
             <table mat-table matSort [dataSource]="dataSource" class="datasource welcome-table" style="margin-top: 30px; font-size: 12px">
 
                 <ng-container matColumnDef="columnName">
