--- a/src/app/application/application.component.html
+++ b/src/app/application/application.component.html
@@ -35,7 +35,7 @@
     </div>
 </div>
 <div *ngIf="!globals.isFullscreen" class="msf-menu-icons-container">
-    <div class="msf-secondary-color msf-menu-icon-container msf-menu-adm">connected</div>
+    <div class="msf-secondary-color msf-menu-icon-container msf-menu-adm">connected as {{globals.currentUser}}</div>
 </div>
 <!--body-->
 
