--- a/src/app/login-screen/login-screen.component.html
+++ b/src/app/login-screen/login-screen.component.html
@@ -14,7 +14,7 @@
                 </mat-form-field>
             </div>
 
-            <div class="block-item-input">
+            <div class="block-item-input" style="margin-top: 25px">
                 <mat-form-field [formGroup]="loginForm">
                     <img src="../../assets/images/password.png" class="input_img">
                     <input matInput type="password" placeholder="Password" class="input-password" formControlName="passwordValidator" name="password" [(value)]="user.password" />
