--- a/src/app/application/application.component.html
+++ b/src/app/application/application.component.html
@@ -1,7 +1,7 @@
 <!--Header-->
 <div *ngIf="!globals.isFullscreen" class="msf-menu-header">
     <div class="msf-menu-header-image-container">
-        <img (click)="goHome()" style="cursor:pointer;" src="../../assets/images/logo_global_peqe.png" class="msf-menu-logo">
+        <img style="cursor:pointer;" src="../../assets/images/logo_global_peqe.png" class="msf-menu-logo">
         <img src="../../assets/images/ajustes.png" class="msf-menu-ajustes-icon">
     </div>
     <div class="msf-header-icons">
