--- a/src/app/web-services/web-services.component.css
+++ b/src/app/web-services/web-services.component.css
@@ -63,8 +63,8 @@ div {
 .box-container {
     display: block;
     flex-wrap: wrap;
-    max-height: 300px;
-    height: 300px;
+    max-height: 350px;
+    height: 350px;
     overflow-y: scroll;
     margin-top: 10px;
     width: 90%;
@@ -235,4 +235,12 @@ textarea.mat-input-element {
 
 .draggable-list.cdk-drop-list-dragging .draggable-box:not(.cdk-drag-placeholder) {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.table-argument {
+    font-size: 12px;
+}
+
+.mat-column-required {
+    width: 10px;
 }
