--- a/src/styles.sass
+++ b/src/styles.sass
@@ -3293,8 +3293,8 @@ div
 .box-container
     display: block
     flex-wrap: wrap
-    max-height: 300px
-    height: 300px
+    max-height: 350px
+    height: 350px
     overflow-y: scroll
     margin-top: 10px
     width: 90%
@@ -3385,6 +3385,14 @@ mat-select
 
 .select-column
     width: 15% !important
+    border-color: white
+    border-style: solid
+    color: white !important
+    height: 30px
+    border-width: 0.5px
+    margin-right: 15px
+
+.select-complete
     border-color: white
     border-style: solid
     color: white !important
